Fixed logged in view header section spacing

--- a/static-storage/css/max-custom.css
+++ b/static-storage/css/max-custom.css
@@ -123,7 +123,6 @@ p, .about-apogee p {
     border-radius: 4px;
     height: 150px;
     max-width: 450px;
-    margin: -40px 0 40px;
 }
 
 .btn-new {
